ags (1.2.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsNotationEditor and AgsNotationEdit
	* replaced AgsEditor by AgsNotationEditor and supporting segmented notation
	* replaced AgsNoteEdit and AgsPatternEdit by AgsNotationEdit
	* implemented AgsMessageDelivery and AgsMessageQueue
	* implemented messages of AgsAudio ::set-audio-channels, ::set-pads and ::done
	* implemented messages of AgsChannel ::add-effect, ::remove-effect and ::done
	* implemented AgsPiano and AgsScrolledPiano
	* implemented AgsDevin
	* implemented AgsJackDevin
	* implemented AgsPulseDevin
	* refactored direct callbacks to UI by replacing with messages
	* refactored ::set-audio-channels and ::set-pads of AgsAudio callbacks to be thread-safe
	* disabled AgsGuiThread synchronization with AgsTaskThread
	* extended AgsJackServer and AgsJackClient to support AgsJackDevin
	* extended AgsPulseServer, AgsPulseClient and AgsPulsePort to support AgsPulseDevin
	* extended AgsSwitchBufferFlag and AgsClearBuffer to support AgsDevin, AgsJackDevin and AgsPulseDevin
	* refactored AgsNotebook to be generic and move to libags-gui
	* improved ags-play-notation to support segmented notation
	* improved ags-record-midi to support segmented notation
	* improved ags-route-dssi to support segmented notation
	* improved ags-route-lv2 to support segmented notation
	* improved AgsSimpleFile to support segmented notation
	* fixed missing any_signal:: prefix of strings passing as pspec to g_object_disconnect()
	* use $(docdir) in Makefile.am

ags (1.1.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* moved GtkStyle allocation to GtkWidget::realize()
	* fixed potential infinite loop during audio port related automation
	* fixed ags.rc
	* increased AGS_THREAD_POOL_DEFAULT_MAX_UNUSED_THREADS

ags (1.1.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing style initializer of some widgets

ags (1.1.5)
