@@ -104,7 +104,7 @@ void ags_functional_editor_workflow_test_add_test()
   CU_basic_set_mode(CU_BRM_VERBOSE);
   CU_basic_run_tests();
   
-  //  ags_test_quit();
+  ags_test_quit();
   
   CU_cleanup_registry();
   
