@@ -104,7 +104,7 @@ ags_functional_drum_test_add_test()
   CU_basic_set_mode(CU_BRM_VERBOSE);
   CU_basic_run_tests();
 
-  //  ags_test_quit();
+  ags_test_quit();
   
   CU_cleanup_registry();
   
