@@ -58,7 +58,7 @@ void ags_thread_pool_real_start(AgsThreadPool *thread_pool);
  * This can achieve enormeous performance.
  */
 
-#define AGS_THREAD_POOL_DEFAULT_MAX_UNUSED_THREADS 48
+#define AGS_THREAD_POOL_DEFAULT_MAX_UNUSED_THREADS 12
 #define AGS_THREAD_POOL_DEFAULT_MAX_THREADS 1024
 
 enum{
